# hf-hub

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RELEASE.md  flake.nix  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/actions/setup-hf-registries/: action.yml
.github/workflows/: benchmark-trigger.yml  benchmarks.yml  rust-release.yml  rust.yml
benches/: Cargo.toml  sync_api.rs
dev/bench/: data.js
docs/superpowers/plans/: 2026-04-24-hf-hub-module-reorg.md
docs/superpowers/specs/: 2026-03-18-xet-upload-download-design.md  2026-04-17-retry-mechanism-design.md  2026-04-24-hf-hub-module-reorg-design.md
examples/: Cargo.toml  blocking_read.rs  blocking_repo_handles.rs  blocking_repository_handles.rs  blocking_spaces.rs  blocking_write.rs  buckets.rs  cache-manager.rs  commits.rs  diff.rs  download.rs  download_upload.rs  files.rs  progress.rs  progress_indicatif.rs  progress_logger.rs  repo.rs  repo_handles.rs  repo_type_any.rs  repository.rs  repository_handles.rs  spaces.rs  upload.rs  upload_large_folder.rs  users.rs
examples/iced/: Cargo.toml
examples/iced/src/: main.rs
examples/socks/: Cargo.toml  README.md
examples/socks/src/: main.rs
hf-hub/: Cargo.toml  README.md
hf-hub/examples/: blocking_read.rs  blocking_repo_handles.rs  blocking_spaces.rs  blocking_write.rs  buckets.rs  commits.rs  diff.rs  download_upload.rs  files.rs  progress.rs  repo.rs  repo_handles.rs  spaces.rs  users.rs
hf-hub/src/: _new_cache_storage.rs  _new_xet.rs  blocking.rs  bucket.rs  cache.rs  client.rs  constants.rs  diff.rs  error.rs  lib.rs  macros.rs  pagination.rs  progress.rs  repo.rs  repository.rs  retry.rs  spaces.rs  test_utils.rs  users.rs  util.rs  wasm_streaming.rs  xet.rs
hf-hub/src/api/: cache.rs  commits.rs  files.rs  mod.rs  repo.rs  spaces.rs  users.rs
hf-hub/src/api/buckets/: mod.rs  sync.rs
hf-hub/src/buckets/: mod.rs  sync.rs  xet_session.rs
hf-hub/src/cache/: mod.rs  storage.rs
hf-hub/src/commits/: diff.rs  mod.rs
hf-hub/src/files/: download.rs  listing.rs  mod.rs  upload.rs
hf-hub/src/progress/: indicatif_handler.rs
hf-hub/src/repository/: commits.rs  diff.rs  download.rs  files.rs  listing.rs  mod.rs  repo_type.rs  upload.rs  xet_session.rs
hf-hub/src/repository/upload/: mod.rs  pipeline.rs
hf-hub/src/repository/upload_large_folder/: local_folder.rs  mod.rs  pipeline.rs
hf-hub/src/types/: bucket_params.rs  buckets.rs  cache.rs  commit.rs  mod.rs  params.rs  progress.rs  repo.rs  repo_params.rs  spaces.rs  user.rs
hf-hub/src/types/buckets/: mod.rs  sync.rs
hf-hub/tests/: blocking_test.rs  bucket_sync_test.rs  bucket_xet_transfer_test.rs  cache_test.rs  download_test.rs  future_size.rs  integration_test.rs  xet_transfer_test.rs
hf-hub/tests/cli/: helpers.rs
hfrs/: Cargo.toml  build.rs
hfrs/src/: cli.rs  main.rs  output.rs  progress.rs
hfrs/src/commands/: download.rs  env.rs  mod.rs  upload.rs  upload_large_folder.rs  version.rs
hfrs/src/commands/auth/: list.rs  login.rs  logout.rs  mod.rs  switch.rs  whoami.rs
hfrs/src/commands/buckets/: cp.rs  create.rs  delete.rs  info.rs  list.rs  mod.rs  move_bucket.rs  remove.rs  sync.rs
hfrs/src/commands/cache/: list.rs  mod.rs
hfrs/src/commands/datasets/: info.rs  list.rs  mod.rs
hfrs/src/commands/models/: info.rs  list.rs  mod.rs
hfrs/src/commands/repos/: branch.rs  create.rs  delete.rs  delete_files.rs  file_metadata.rs  mod.rs  move_repo.rs  settings.rs  tag.rs
hfrs/src/commands/spaces/: info.rs  list.rs  mod.rs
hfrs/src/util/: mod.rs  token.rs
hfrs/tests/: cli_comparison.rs  helpers.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs  test_utils.rs
integration-tests/tests/: blocking_test.rs  bucket_download_stream_test.rs  bucket_sync_test.rs  bucket_xet_transfer_test.rs  cache_test.rs  download_test.rs  integration_test.rs  upload_large_folder_test.rs  xet_transfer_test.rs
scripts/: verify_wasm.sh
src/: lib.rs  paths.rs
src/api/: commit.rs  lfs.rs  mod.rs  sync.rs  tokio.rs  universal.rs  xet.rs
src/api/sync/: reader.rs
src/api/tokio/: download.rs  mod.rs  repo_info.rs
src/api/tokio/upload/: commit_api.rs  commit_info.rs  completion_payload.rs  lfs.rs  mod.rs
src/cache_manager/: formatting_parsing.rs  fs_utils.rs  mod.rs
wasm/smoke/: Cargo.toml  README.md  build_wasm.sh
wasm/smoke/examples/: download.html  progress.html
wasm/smoke/src/: lib.rs
wasm/tests/: Cargo.toml  run_tests.sh
wasm/tests/tests/: integration.rs
