[package]
name = "hf-hub"
version = "0.4.3"
edition = "2021"
homepage = "https://github.com/huggingface/hf-hub"
license = "Apache-2.0"
documentation = "https://docs.rs/hf-hub"
repository = "https://github.com/huggingface/hf-hub"
readme = "README.md"
keywords = ["huggingface", "hf", "hub", "machine-learning"]
description = """
This crates aims ease the interaction with [huggingface](https://huggingface.co/) 
It aims to be compatible with [huggingface_hub](https://github.com/huggingface/huggingface_hub/) python package, but only implements a smaller subset of functions.
"""


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.28", optional = true }
dirs = "6"
http = { version = "1.0.0", optional = true }
indicatif = { version = "0.17.5", optional = true }
log = "0.4.19"
num_cpus = { version = "1.15.0", optional = true }
rand = { version = "0.9", optional = true }
reqwest = { version = "0.12.2", optional = true, default-features = false, features = [
  "json",
  "stream",
] }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
thiserror = { version = "2", optional = true }
tokio = { version = "1.29.1", optional = true, features = ["fs", "macros"] }
ureq = { version = "2", optional = true, features = [
  "json",
  "socks-proxy",
] }
native-tls = { version = "0.2.12", optional = true }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60"
features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"]
optional = true

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"
optional = true

[features]
default = ["default-tls", "tokio", "ureq"]
# These features are only relevant when used with the `tokio` feature, but this might change in the future.
default-tls = ["native-tls"]
native-tls = ["dep:reqwest", "reqwest?/default", "dep:native-tls", "dep:ureq", "ureq?/native-tls"]
rustls-tls = ["reqwest?/rustls-tls"]
tokio = [
  "dep:futures",
  "dep:indicatif",
  "dep:num_cpus",
  "dep:rand",
  "dep:reqwest",
  "reqwest/charset",
  "reqwest/http2",
  "reqwest/macos-system-configuration",
  "dep:serde",
  "dep:serde_json",
  "dep:thiserror",
  "dep:tokio",
  "tokio/rt-multi-thread",
  "dep:libc",
  "dep:windows-sys",
]
ureq = [
  "dep:http",
  "dep:indicatif",
  "dep:rand",
  "dep:serde",
  "dep:serde_json",
  "dep:thiserror",
  "dep:ureq",
  "dep:libc",
  "dep:windows-sys",
]

[dev-dependencies]
hex-literal = "1.0"
sha2 = "0.10"
tokio-test = "0.4.2"
