[package]
name = "integration-tests"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
hf-hub = { path = "../hf-hub", features = ["blocking"] }
sha2 = "0.11"

[dev-dependencies]
futures = "0.3"
rand = "0.10"
serde_json = "1"
serial_test = "3"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
