[package]
name = "hf-hub-wasm-smoke"
version = "0.0.0"
edition = "2024"
publish = false
description = "Compile-time verification that hf-hub's wasm-safe subset works on wasm32-unknown-unknown."

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
hf-hub = { path = "../../hf-hub" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
futures-util = "0.3"
