[package]
name = "hf-hub-wasm-smoke"
version = "0.0.0"
edition = "2024"
publish = false
description = "wasm32-unknown-unknown example and compile-time check for hf-hub: exposes HFRepository::download_file_stream to JS via wasm-bindgen."

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
bytes = "1"
hf-hub = { path = "../../hf-hub" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
futures-util = "0.3"
# `send_wrapper` lets us implement `Send + Sync` for the `js_sys::Function`
# callback by panicking — rather than triggering UB — if the wrapper is ever
# accessed from a different thread than the one that constructed it. See
# `JsProgressHandler` in `src/lib.rs`.
send_wrapper = "0.6"
