[package]
name = "hf-hub-wasm-tests"
version = "0.0.0"
edition = "2024"
publish = false
description = "wasm32-unknown-unknown integration tests for hf-hub: runs HFClient/HFRepository against the live Hub from a headless browser."

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
hf-hub = { path = "../../hf-hub" }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
futures-util = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
# When enabled, the test crate omits `wasm_bindgen_test_configure!(run_in_browser)`,
# letting `wasm-bindgen-test`'s default Node.js runner pick up the tests. This is
# the default mode `./run_tests.sh` runs in (Node, no webdriver); pass
# `RUN_IN_BROWSER=1 ./run_tests.sh` to drop the feature and use the headless
# browser runner instead, which is what the `wasm-test` CI job exercises.
node-tests = []
